# cortex-gnat-rts

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
common/: adaint.c  freertos_bindings.c  s-fremem.ads  s-fretas.adb  s-stalib.adb  s-stalib.ads  system.ads
common/gcc8/: environment_task.adb
esp32/: README.md  build_runtime.gpr  obj_list.txt  runtime.xml
esp32/adainclude/: a-interr.ads  a-intnam.ads  g-io.adb  s-interr.adb  s-interr.ads  system.ads
esp32/esp32/: esp32-gpio.adb  esp32-gpio.ads  esp32-spi.adb  esp32-spi.ads  esp32.gpr
examples/gnatio/: CMakeLists.txt
examples/gnatio/main/: CMakeLists.txt  g-io.adb  g-io.ads  gnatio.adb  gnatio.gpr
examples/gpio/: CMakeLists.txt
examples/gpio/main/: CMakeLists.txt  blink.adb  blink.c  blink.gpr
examples/hello_world/: CMakeLists.txt
examples/hello_world/main/: CMakeLists.txt  hello_world.adb  hello_world.c  hello_world.gpr
examples/interrupt/main/: CMakeLists.txt  handlers.adb  handlers.ads  interrupt.adb  interrupt.gpr
examples/lora/: CMakeLists.txt
examples/lora/main/: CMakeLists.txt  ints.adb  ints.ads  lora.adb  lora.ads  lora.gpr  main.adb
gprconfig/: linker-esp32.xml
test-common/: interrupts.adb
